Le risposte nel file html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,88 @@
     <title>Document</title>
 </head>
 <body>
- PROVA   
+    /* ESERCIZIO 1
+    Elenca e descrivi i principali datatype in JavaScript. Prova a spiegarli come se volessi farli comprendere a un bambino.
+   */
+   
+   /* I principali datatype in JS sono: (Numeri, Stringhe, boolean, null e undfefined) 
+   
+   1 - I numeri, come la parola stessa suggerisce sono i dati composti dalla numerazione standard 
+   che utlizziamo per fare operazioni matematiche. Per assegnarli ad una variabile
+   basta scriverli cosi': 1, 2, 3, 4 ecc
+   
+   2 - Le stringhe invece sono, banalmente, dati formati da parole intere. Per essere assegnati
+   ad una variabile bisogna scriverli tra due "", esempio: "Ciao", "Cane", "12"
+   
+   3 - I dati di tipo boolean sono verificati solo da condizioni e possono essere true and false.
+   esempio: let x = 5; let y = 10; x>y? il risultato, ossia true, sarà un dato booleano.
+   
+   4 - i dati di tipo null, siamo noi a definirli. Se ad una variabile in precedenza era assegnato
+   un numero, o un altro tipo di dato, scrivendo null dopo l'uguale quel dato diventerà esattamente un dato null
+   esempio: Prima --> x = 5; dopo --> x = null; 
+   
+   5 - Un dato undefinend viene fuori se lasciamo una variabile vuota es(x=;) oppure in seguito
+   ad un errore di codice.
+   */
+   
+   
+   /* ESERCIZIO 2
+    Descrivi cos'è un oggetto in JavaScript, con parole tue.
+   */
+   
+   /* Un oggetto è un insieme di dati simili che vanno a formare l'oggetto stesso.
+   esempio: Auto {Marca: Audi; Modello: A3; Motore: Benzina;}
+    */
+   
+   /* ESERCIZIO 3
+    Scrivi il codice necessario ad effettuare un addizione (una somma) dei numeri 12 e 20.
+   */
+   
+   /* let somma;
+   let x = 12;
+   let y = 20;
+   somma = (x+y)
+   console.log(somma);*/
+   
+   /* ESERCIZIO 4
+    Crea una variable di nome "x" e assegna ad essa il numero 12.
+   */
+   
+   /* let x = 12 */
+   
+   /* ESERCIZIO 5
+    Crea una variable chiamata "name" e assegna ad essa il tuo nome, sotto forma di stringa.
+   */
+   
+   /* let name = "Valerio" */
+   
+   /* ESERCIZIO 6
+    Esegui una sottrazione tra i numeri 4 e la variable "x" appena dichiarata (che contiene il numero 12).
+   */
+   
+   /* let sottrazione;
+   let x = "12";
+   let y = 4;
+   sottrazione = (x-y);
+   console.log (sottrazione); */
+   
+   /* ESERCIZIO 7
+    Crea due variabili: "name1" e "name2". Assegna a name1 la stringa "john", e assegna a name2 la stringa "John" (con la J maiuscola!).
+    Verifica che name1 sia diversa da name2 (suggerimento: è la stessa cosa di verificare che la loro uguaglianza sia falsa).
+    Infine, verifica che la loro uguaglianza diventi true se entrambe vengono trasformate in lowercase (senza cambiare il valore di name2!).
+    NON HAI BISOGNO DI UN BLOCCO IF/ELSE. E' sufficiente utilizzare console.log().
+   */
+   
+   /* let name1 = "john";
+   let name2 =  "John";
+   console.log (name1 === name2); FALSE
+   
+   let name1 = "john";
+   let name2 = "John";
+   console.log (name1.toLowerCase === name2.toLowerCase ); TRUE
+   
+   */
+   
  <script src="script.js"></script>
 </body>
 </html>
